# forgotten-depths

./: .dockerignore  .env.example  .gitignore  ADMIN_COMMANDS.md  CLAUDE.md  Dockerfile  GITHUB_TOOLS_README.md  INTEGRATION_SUMMARY.md  LIGHTING_SYSTEM.md  README.md  SPELL_ANALYSIS_REPORT.md  debug_commands.py  main.py  pyproject.toml  setup.py  simple_mud_server.py  test_arena_gong.py  test_arena_navigation.py  test_async_integration.py  test_async_mud.db  test_connections.py  test_enter_reload.py  test_equipment.py  test_gong.py  test_graph_navigation.py  test_inventory_vendor.py  test_manual_telnet.py  test_npc_loading.py  test_partial_names.py  test_save_load.db  test_seamless_combat.py  test_sell_price.py  test_stats_debug.py  test_vendor_location.py
config/: database.yaml  game_settings.yaml  items.yaml  server.yaml
data/: SPELL_SYSTEM_ENHANCEMENTS.md  TRAP_SYSTEM.md  barriers.json  classes.json  command_triggers.json  mud.db  quests.json  spells.json  teleporters.json  traps.json
docs/: ASYNC_VS_SELECT_COMPARISON.md  DEPLOYMENT.md  GITHUB_ISSUE_AGENT.md  GITHUB_ISSUE_MCP_SERVER.md  HOW_TO_PLAY.md  LOCKED_DOORS.md  MAGE_QUARTER_EXPANSION.md  MOB_SPELLCASTING.md  REFACTORING_PLAN.md  SPELL_TESTING_GUIDE.md  TESTING_RGB_COLORS.md  WORLD1_AREA_CONNECTIONS.md  WORLD1_COMPLETE_ANALYSIS.md  WORLD1_IMPORT_PROGRESS.md  WORLD1_MIGRATION_PLAN.md  WORLD1_RUNE_PROGRESSION.md  WORLD1_ZONE_ANALYSIS.md  WORLD1_ZONE_MAP.md  manual_equipment_test.py  setup.md
k8s/: README.md  configmap.yaml  deployment.yaml  forgotten-depths-kubeconfig.yaml  namespace.yaml  persistent-volume.yaml  service-nodeport.yaml  service.yaml
requirements/: base.txt  dev.txt  test.txt
scripts/: add_spell_attributes.py  admin_tools.py  analyze_teleporters.py  analyze_world1_zones.py  analyze_world1_zones_v2.py  consolidate_rooms.py  convert_armor_yaml.py  convert_dungeon1_rooms.py  convert_dungeon2_rooms.py  convert_dungeon3_rooms.py  convert_equipment_yaml.py  convert_lairs.py  convert_mobs_yaml.py  convert_spells_yaml.py  convert_weapons_yaml.py  create_areas_from_csv.py  create_world.py  debug_drop.py  debug_equip.py  debug_world_loading.py  docker-entrypoint.sh  double_spell_levels.py  fix_dungeon1_titles.py  fix_world1_lairs.py  generate_spell_scrolls.py  github_issue_agent.py  github_issue_mcp_server.py  import_world1_areas.py  init_database.py  populate_dungeon_lairs.py  refactor_commands.py  reorganize_spells_by_class.py  reset_database.py  simple_inventory_test.py  split_items.py  split_monsters.py  split_spells.py  start_async_server.py  start_ether_server.py  (+10 more)
src/: __init__.py
(+1087 files in other folders)
