[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgotten-depths"
version = "0.1.0"
description = "A Python-based Multi-User Dungeon (MUD) game"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0"
]

[project.optional-dependencies]
web = [
    "Flask>=2.3.0",
    "Flask-SocketIO>=5.3.0"
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "python-dotenv>=1.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
forgotten-depths = "main:main"
fd-server = "scripts.start_server:main"
fd-admin = "scripts.admin_tools:main"
fd-reset-db = "scripts.reset_database:main"
fd-create-world = "scripts.create_world:main"

[project.urls]
Homepage = "https://github.com/yourusername/forgotten-depths"
Repository = "https://github.com/yourusername/forgotten-depths"
Issues = "https://github.com/yourusername/forgotten-depths/issues"
Documentation = "https://github.com/yourusername/forgotten-depths/blob/main/docs/setup.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["data/**/*.json", "data/**/*.yaml", "config/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short"